<resources>


    <!--Titles Section-->


    <string name="title_autentificarae">Autentificare</string>
    <string name="title_inregistrare">Inregistrare</string>
    <string name="title_date_companie">Completeaza datele companiei tale</string>
    <string name="title_creaza_cont_administrare">Creaza un cont de administrare</string>
    <string name="title_detalii_administrare">Detalii administrare</string>
    <string name="title_cont_administrator">Cont administrator</string>
    <string name="title_termeni_conditii">Termeni si Conditii</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_creeaza_transport">CREEAZA TRANSPORT NOU - eCRM</string>
    <string name="title_adauga_sofer">Adauga sofer</string>
    <string name="title_adauga_masina">Adauga masina</string>


    <!--Sub-Titles Section-->


    <string name="sub_title_step_one">Pasul 1/2</string>
    <string name="sub_title_step_two">Pasul 2/2</string>
    <string name="sub_title_informatie_importanta">Informatie importanta</string>
    <string name="sub_title_expeditie">Expeditie in derulare</string>
    <string name="sub_title_detalii_livrare">Detalii livrare</string>
    <string name="sub_title_observatii_semenaturi">Observatii si semnaturi</string>
    <string name="sub_title_plata_echipaj">Plata si echipaj</string>


    <!--    Label Section-->


    <string name="label_username_adresa_mail">Username/adresa de e-mail</string>
    <string name="label_parola">Parola</string>
    <string name="label_confirma_parola">Confirma parola</string>
    <string name="label_ai_uitat_parola">Ai uitat parola?</string>
    <string name="label_nume">Nume</string>
    <string name="label_prenume">Prenume</string>
    <string name="label_email">E-mail</string>
    <string name="label_telefon">Telefon</string>
    <string name="label_adresa">Adresa</string>
    <string name="label_oras">Oras</string>
    <string name="label_tara">Tara</string>
    <string name="label_user_name">UserName</string>
    <string name="label_termeni">Am citit si sunt de acord cu</string>
    <string name="label_termeni_redirect">termenii si conditiile</string>
    <!-- Creeaza transport -->
    <string name="label_expeditor">01. Expeditor</string>
    <string name="label_destinatar">02. Destinatar</string>
    <string name="label_selectati_locul">03. Locul prevazut pentru livrarea marfii</string>
    <string name="label_locul_incarcarii">04. Locul si data incarcarii marfii</string>
    <string name="label_documente_anexate">05. Documente anexate</string>
    <string name="label_marci_numere">06. Marci si numere</string>
    <string name="label_colete">07. Numar colete</string>
    <string name="label_amabalare">08. Mod de ambalare</string>
    <string name="label_natura_marfii">09. Natura marfii</string>
    <string name="label_numar_static">10. Numar static</string>
    <string name="label_greutate_bruta">11. Greutate bruta</string>
    <string name="label_cubaj">12. Cubaj</string>
    <string name="label_instructiunile_expeditorului">13. Instructiunile Expeditorului</string>
    <string name="label_instructiuni_plata">14. Instructiuni plata</string>
    <string name="label_suma_plata">15. Suma de plata</string>
    <string name="label_transportator">16. Transportator</string>
    <string name="label_marca_autovehicul">17. Marca autovehicului</string>
    <string name="label_transportatori">17. Transportatori succesivi</string>
    <string name="label_rezerve">18. Rezerve si observatii ale transportatorilor</string>
    <string name="label_acorduri">19. Acorduri speciale</string>
    <string name="label_incheiat">21. Incheiat la:</string>
    <string name="label_tone">Tone</string>
    <string name="label_numar">Numar</string>
    <string name="label_tabel">20. Tabel de plata</string>
    <string name="label_pret">Pretul transportatorului</string>
    <string name="label_taxe_suplimentare">Taxe suplimentare</string>
    <string name="label_taxe_vamale">Taxe vamale</string>
    <string name="label_alte_taxe">Alte taxe</string>
    <string name="label_destinatar_ul">Destinatar</string>
    <string name="label_adauga_nume">Nume</string>
    <string name="label_adauga_prenume">Prenume</string>
    <string name="label_platitor_tva">Platitor TVA?</string>
    <string name="label_cui">CUI</string>
    <string name="label_data">Data</string>
    <string name="label_adauga_numele_card">Numele de pe card</string>
    <string name="label_adagua_numar_card_label">Numarul cardului</string>
    <string name="label_data_expirarii_label">Data expirarii</string>
    <string name="label_cvv">CVV</string>
    <string name="label_mod_plata">Selectati modul de plata</string>
    <string name="label_mod_plata_ecrm">Selectati modul plata e-CRM</string>
    <string name="label_numar_ordine">Numar de ordine</string>
    <string name="label_numar_captractor">Numar de inmatriculare cap tractor</string>
    <string name="label_numar_vagon">Numar de inmatriculare vagon</string>
    <string name="label_selecteaza_expeditor">Selectati expeditorul</string>
    <string name="label__numar_inmatriculare">Numar de inmatriculare cap tractor</string>


    <!--    Inputs Section-->


    <string name="input_username_adresa_mail">Username sau adresa de e-mail</string>
    <!-- Creeaza transport -->
    <string name="input_selectati_destinatarul">Selecteaza sau introduceti numele companiei</string>
    <string name="input_selecteaza_numar">Strada, numarul</string>
    <string name="input_localitate">Localitate</string>
    <string name="input_selectati_locul_data">Locul si data</string>
    <string name="input_documente">Documente anexate</string>
    <string name="input_marci_numere">Marci si numere</string>
    <string name="input_colete">Colete</string>
    <string name="input_amabalare">Mod de ambalare</string>
    <string name="input_natura_marfii">Natura marfii</string>
    <string name="input_numar_static">Numar static</string>
    <string name="input_greutate_bruta">Greutate bruta</string>
    <string name="input_cubaj">Cubaj</string>
    <string name="input_instructiunile_expeditorului">Instructiunile Expeditorului</string>
    <string name="input_instructiuni_plata">Instructiuni de plata</string>
    <string name="input_plata_expediere">Plata la expediere</string>
    <string name="input_mod_plata">Mod plata</string>
    <string name="input_suma_plata">Suma de plata</string>
    <string name="input_transportator">Denumire companie</string>
    <string name="input_marca_autovehicul">Marca</string>
    <string name="input_tone">Tone</string>
    <string name="input_transportatori">Nume, adresa, tara</string>
    <string name="input_rezerve">Rezerve si observatii ale transportatorilor</string>
    <string name="input_acorduri">DA</string>
    <string name="input_incheiat">Adresa</string>
    <string name="input_email">Adresa de e-mail</string>
    <string name="input_numar">Numar de circulatie</string>
    <string name="input_echipaj_unu">Echipaj 1</string>
    <string name="input_echipaj_doi">Echipaj 2</string>
    <string name="input_echipaj">Nume echipaj</string>
    <string name="input_numar_captractor">Dnumar_captractor_label</string>
    <string name="input_numar_vagon">Numar de inmatriculare</string>
    <string name="input_cui">Selectati modul plata e-CRM</string>
    <string name="input_numar_ordine">Numar de ordine</string>
    <string name="input_numar_inmatriculare">Numar de inmatriculare</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- Navigation items -->

    <string name="contul_meu">Contul meu</string>
    <string name="plan_curent">Plan curent</string>
    <string name="upgrade_plan">Upgrade plan</string>
    <string name="metode_de_plata">Metode de plata</string>
    <string name="setari">Setari</string>
    <string name="ajutor_si_feedback">Ajutor si Feedback</string>
    <string name="termeni_si_conditii">Termeni si Conditii</string>
    <string name="confidentialitate">Confidentialitate</string>

    <!-- Optiuni fragment -->

    <string name="fragment_optiuni">Optiuni</string>
    <string name="fragment_document_nou">Document eCRM nou</string>
    <string name="fragment_adauga_client">Adauga client</string>
    <string name="fragment_adauga_sofer">Adauga sofer</string>
    <string name="fragment_adauga_masina">Adauga masina</string>
    <string name="fragment_upload_factura">Upload  factura</string>
    <string name="fragment_upload_contract">Upload  contract</string>
    <string name="fragment_sterge">Sterge</string>
    <string name="fragment_modifica">Modifica</string>


    <string name="felicitari_title">Felicitari</string>
    <string name="succes_subtitle">Documentul tau a fost creat cu succes</string>


    <!-- Content-->


    <string name="content_introductionLogo">Gotrans Logo</string>
    <string name="content_copyright">2019 GOTRANS SRL toate drepturile sunt rezervate</string>
    <string name="content_app_name">GoTrans SRL</string>


    <!-- Buttons sections-->


    <string name="buton_autentificare">Autentificare</string>
    <string name="buton_inregistrare">Inregistrare</string>
    <string name="buton_inapoi">Inapoi</string>
    <string name="buton_adauga">Adauga</string>
    <string name="buton_continua">Continua</string>
    <string name="buton_finalizare">Finalizare</string>
    <string name="buton_salveaza">Salveaza</string>
    <string name="buton_inapoi_la_editare">Inapoi la editare</string>
    <string name="buton_upgrade">Upgrade</string>
    <string name="buton_finalizare_plata">Finalizare plata</string>
    <string name="buton_trimite">Trimite</string>
    <string name="buton_solicita_stergere_cont">Solicita stergere cont</string>
    <string name="buton_incarca_document">Incarca document</string>
    <string name="buton_termeni_conditii">Sunt de acord cu termenii si conditiile</string>
    <string name="buton_descarca_proforma">Descarca proforma</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="home_second">Home Second</string>


</resources>


