<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/contul_meu" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/plan_curent" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/upgrade_plan" />
    </group>

    <item
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/metode_de_plata" />
            <item
                android:id="@+id/nav_send"
                android:title="@string/setari" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/ajutor_si_feedback" />
            <item
                android:id="@+id/nav_send"
                android:title="@string/termeni_si_conditii" />
            <item
                android:id="@+id/nav_send"
                android:title="@string/confidentialitate" />
        </menu>
    </item>

</menu>
