<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layer_top_blue"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="25dp">
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/layer_main_white"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoText="false"
                    android:text="@string/creeaza_transport"
                    android:textAlignment="center"
                    android:textColor="@color/themeBlue"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:paddingVertical="30dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#EFEFEF" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detalii_livrare"
                    android:textAlignment="center"
                    android:textColor="@color/darkBlue"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:paddingVertical="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:scrollbarSize="4dp"
                    android:text="@string/label_marci_numere"
                    android:textColor="#2D3844"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="13dp"
                    android:background="@drawable/input_border"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/input_marci_numere"
                    android:textColor="#B7BABE"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:scrollbarSize="4dp"
                    android:text="@string/label_colete"
                    android:textColor="#2D3844"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="13dp"
                    android:background="@drawable/input_border"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/input_colete"
                    android:textColor="#B7BABE"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/telefon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:scrollbarSize="4dp"
                    android:text="@string/label_amabalare"
                    android:textColor="#2D3844"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="13dp"
                    android:background="@drawable/input_border"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/input_amabalare"
                    android:textColor="#B7BABE"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/telefon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:scrollbarSize="4dp"
                    android:text="@string/label_natura_marfii"
                    android:textColor="#2D3844"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="13dp"
                    android:background="@drawable/input_border"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/input_natura_marfii"
                    android:textColor="#B7BABE"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/telefon2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="1"
                            android:scrollbarSize="4dp"
                            android:text="@string/label_numar_static"
                            android:textColor="#2D3844"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/editText3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/input_border"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:text="@string/input_numar_static"
                            android:textColor="#B7BABE"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/telefon3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="1"
                            android:scrollbarSize="4dp"
                            android:text="@string/label_greutate_bruta"
                            android:textColor="#2D3844"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/input_border"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:text="@string/input_greutate_bruta"
                            android:textColor="#B7BABE"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:scrollbarSize="4dp"
                    android:text="@string/label_cubaj"
                    android:textColor="#2D3844"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="13dp"
                    android:background="@drawable/input_border"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/input_cubaj"
                    android:textColor="#B7BABE"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:scrollbarSize="4dp"
                    android:text="@string/label_instructiunile_expeditorului"
                    android:textColor="#2D3844"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="13dp"
                    android:background="@drawable/input_border"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/input_instructiunile_expeditorului"
                    android:textColor="#B7BABE"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/button4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input_border"
                            android:text="@string/buton_inapoi"
                            android:textColor="@color/darkBlue" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:text="@string/buton_continua"
                            android:textColor="@color/colorAccent" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
